# hello-haskell-flake

./: CHANGELOG.md  Main.hs  README.md  flake.nix  hello-haskell-flake.cabal  package.yaml
app/: Main.hs
