cabal-version:      3.0
name:               hello-haskell-flake
version:            0.1.0.0
synopsis:           Experimenting with flakes.

-- A longer description of the package.
-- description:
homepage:           github.com/mhwombat/hello-haskell-flake

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie

-- A copyright notice.
-- copyright:
category:           Text
extra-source-files:
    CHANGELOG.md
    README.md

executable hello-haskell-flake
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
